--- a/nginx/laravel.conf
+++ b/nginx/laravel.conf
@@ -2,7 +2,7 @@ server {
 
     listen 80;
 
-    server_name portainer-panel;
+    server_name leegui;
  
     # Log files for Debugging
         access_log /var/log/nginx/laravel-access.log;
