--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,14 @@ services:
       - ./nginx/laravel.conf:/etc/nginx/conf.d/default.conf
 
   php:    
-    image: php:7.4-fpm
+    image: marcelofmatos/leegui
     volumes:
-      - ./:/var/www/html
+      - code:/var/www/html
+      
+  init:
+    image: composer
+    command: composer install
+    restart: "no"
+    volumes:
+      - code:/app
+      
