--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     ports:
         - "8082:80"
     volumes:
-      - ./:/var/www/html
-      - ./nginx/laravel.conf:/etc/nginx/conf.d/default.conf
+      - code:/var/www/html
+      - nginx-confd:/etc/nginx/conf.d/
 
   php:    
     image: marcelofmatos/leegui
@@ -15,12 +15,12 @@ services:
       - code:/var/www/html
       
   init:
-    image: composer
+    image: marcelofmatos/leegui
     command: composer install
     restart: "no"
     volumes:
       - code:/app
-      
+
 volumes:
   code:
     driver: local
