--- a/.github/workflows/auto-version.yml
+++ b/.github/workflows/auto-version.yml
@@ -29,7 +29,7 @@ jobs:
       id: get_version
       run: |
         # Busca a última tag que segue o padrão semver (com ou sem v)
-        LATEST_TAG=$(git tag -l --sort=-version:refname | grep -E '^v?[0-9]+\.[0-9]+\.[0-9]+
+        LATEST_TAG=$(git tag -l --sort=-version:refname | grep -E '^v?[0-9]+\.[0-9]+\.[0-9]+)
         
         echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
         echo "new_tag=$NEW_TAG" >> $GITHUB_OUTPUT
