--- a/.github/workflows/auto-version.yml
+++ b/.github/workflows/auto-version.yml
@@ -1,19 +1,30 @@
-name: Auto Version on PR Merge
+name: Create Release (Manual Trigger)
 
 on:
-  pull_request:
-    types: [closed]
-    branches: [ main, master ]
   workflow_dispatch:
+    inputs:
+      version_type:
+        description: 'Type of version increment'
+        required: true
+        default: 'patch'
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
+      prerelease:
+        description: 'Mark as pre-release'
+        required: false
+        default: false
+        type: boolean
 
 jobs:
-  auto-version:
+  create-release:
     runs-on: ubuntu-latest
-    
-    if: github.event.pull_request.merged == true
     
     permissions:
       contents: write
+      pull-requests: read
     
     steps:
     - name: Checkout
@@ -27,113 +38,86 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
 
-    - name: Get Version
-      id: version
+    - name: Get Current Version
+      id: current
       run: |
-        echo "=== Getting Current Version ==="
-        
-        # Fetch all tags
         git fetch --tags
         
-        # Get all tags
-        ALL_TAGS=$(git tag -l)
+        LATEST_TAG=$(git tag -l | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -1)
         
-        if [ -z "$ALL_TAGS" ]; then
-          echo "No tags found - starting with 1.0.0"
-          CURRENT_VERSION="none"
-          NEW_VERSION="1.0.0"
+        if [ -z "$LATEST_TAG" ]; then
+          echo "No previous versions found"
+          CURRENT_VERSION="0.0.0"
         else
-          echo "Found tags:"
-          echo "$ALL_TAGS"
-          
-          # Find highest semantic version
-          HIGHEST_VERSION=""
-          HIGHEST_MAJOR=0
-          HIGHEST_MINOR=0
-          HIGHEST_PATCH=0
-          
-          echo "$ALL_TAGS" | while read -r tag; do
-            if [ -n "$tag" ]; then
-              # Clean tag (remove v prefix)
-              clean=$(echo "$tag" | sed 's/^v//')
-              
-              # Check if it matches x.y.z pattern
-              case "$clean" in
-                [0-9]*.[0-9]*.[0-9]*)
-                  echo "Valid version: $clean"
-                  
-                  major=$(echo "$clean" | cut -d. -f1)
-                  minor=$(echo "$clean" | cut -d. -f2)
-                  patch=$(echo "$clean" | cut -d. -f3)
-                  
-                  # Simple comparison
-                  if [ "$major" -gt "$HIGHEST_MAJOR" ] || \
-                     ( [ "$major" -eq "$HIGHEST_MAJOR" ] && [ "$minor" -gt "$HIGHEST_MINOR" ] ) || \
-                     ( [ "$major" -eq "$HIGHEST_MAJOR" ] && [ "$minor" -eq "$HIGHEST_MINOR" ] && [ "$patch" -gt "$HIGHEST_PATCH" ] ); then
-                    echo "NEW_VERSION=$major.$minor.$patch" > /tmp/version.txt
-                    echo "CURRENT_TAG=$tag" > /tmp/current.txt
-                  fi
-                  ;;
-              esac
-            fi
-          done
-          
-          if [ -f "/tmp/version.txt" ]; then
-            source /tmp/version.txt
-            source /tmp/current.txt
-            echo "Current highest version: $NEW_VERSION"
-            
-            # Increment patch
-            current_patch=$(echo "$NEW_VERSION" | cut -d. -f3)
-            new_patch=$((current_patch + 1))
-            major=$(echo "$NEW_VERSION" | cut -d. -f1)
-            minor=$(echo "$NEW_VERSION" | cut -d. -f2)
-            
-            NEW_VERSION="$major.$minor.$new_patch"
-            CURRENT_VERSION="$CURRENT_TAG"
-          else
-            echo "No semantic versions found - starting with 1.0.0"
-            CURRENT_VERSION="none"
-            NEW_VERSION="1.0.0"
-          fi
+          echo "Latest version: $LATEST_TAG"
+          CURRENT_VERSION="$LATEST_TAG"
         fi
         
-        echo "Current: $CURRENT_VERSION"
-        echo "New: $NEW_VERSION"
-        
         echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+
+    - name: Calculate New Version
+      id: version
+      run: |
+        CURRENT="${{ steps.current.outputs.current_version }}"
+        VERSION_TYPE="${{ github.event.inputs.version_type }}"
+        
+        if [ "$CURRENT" = "0.0.0" ]; then
+          NEW_VERSION="1.0.0"
+        else
+          MAJOR=$(echo "$CURRENT" | cut -d. -f1)
+          MINOR=$(echo "$CURRENT" | cut -d. -f2)
+          PATCH=$(echo "$CURRENT" | cut -d. -f3)
+          
+          case "$VERSION_TYPE" in
+            "major")
+              NEW_VERSION="$((MAJOR + 1)).0.0"
+              ;;
+            "minor")
+              NEW_VERSION="$MAJOR.$((MINOR + 1)).0"
+              ;;
+            "patch")
+              NEW_VERSION="$MAJOR.$MINOR.$((PATCH + 1))"
+              ;;
+          esac
+        fi
+        
+        echo "New version: $NEW_VERSION"
         echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
+
+    - name: Get Merged PRs Since Last Release
+      id: prs
+      run: |
+        CURRENT="${{ steps.current.outputs.current_version }}"
+        
+        if [ "$CURRENT" = "0.0.0" ]; then
+          echo "Getting recent commits for initial release"
+          SINCE_DATE=$(date -d '30 days ago' '+%Y-%m-%d')
+          PRS=$(gh pr list --state merged --limit 50 --search "merged:>$SINCE_DATE" --json number,title,author | jq -r '.[] | "- #\(.number): \(.title) (@\(.author.login))"')
+        else
+          echo "Getting PRs since $CURRENT"
+          # Get commit date of last tag
+          TAG_DATE=$(git log -1 --format=%ci "$CURRENT" 2>/dev/null || echo "30 days ago")
+          SINCE_DATE=$(date -d "$TAG_DATE" '+%Y-%m-%d')
+          PRS=$(gh pr list --state merged --limit 50 --search "merged:>$SINCE_DATE" --json number,title,author | jq -r '.[] | "- #\(.number): \(.title) (@\(.author.login))"')
+        fi
+        
+        if [ -z "$PRS" ]; then
+          PRS="- Minor updates and improvements"
+        fi
+        
+        echo "prs<<EOF" >> $GITHUB_OUTPUT
+        echo "$PRS" >> $GITHUB_OUTPUT
+        echo "EOF" >> $GITHUB_OUTPUT
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create Tag
       run: |
-        NEW_TAG="${{ steps.version.outputs.new_version }}"
-        echo "Creating tag: $NEW_TAG"
+        NEW_VERSION="${{ steps.version.outputs.new_version }}"
         
-        git tag "$NEW_TAG"
-        git push origin "$NEW_TAG"
-        
-        echo "Tag $NEW_TAG created successfully"
-
-    - name: Generate Changelog
-      id: changelog
-      run: |
-        CURRENT="${{ steps.version.outputs.current_version }}"
-        
-        if [ "$CURRENT" = "none" ]; then
-          echo "First release"
-          CHANGES="- Initial release"
-        else
-          echo "Getting changes since $CURRENT"
-          CHANGES=$(git log "$CURRENT"..HEAD --oneline --no-merges | head -20 | sed 's/^/- /')
-          
-          if [ -z "$CHANGES" ]; then
-            CHANGES="- Minor updates and improvements"
-          fi
-        fi
-        
-        echo "changes<<EOF" >> $GITHUB_OUTPUT
-        echo "$CHANGES" >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
+        echo "Creating tag: $NEW_VERSION"
+        git tag "$NEW_VERSION"
+        git push origin "$NEW_VERSION"
 
     - name: Create Release
       uses: actions/create-release@v1
@@ -145,34 +129,33 @@ jobs:
         body: |
           ## ${{ steps.version.outputs.new_version }}
           
-          ${{ steps.changelog.outputs.changes }}
+          ### 🚀 What's Changed
+          
+          ${{ steps.prs.outputs.prs }}
+          
+          ### 📊 Release Info
+          - **Type**: ${{ github.event.inputs.version_type }} release
+          - **Previous Version**: ${{ steps.current.outputs.current_version }}
+          - **Released by**: @${{ github.actor }}
         draft: false
-        prerelease: false
+        prerelease: ${{ github.event.inputs.prerelease }}
 
     - name: Update package.json
       run: |
         if [ -f "package.json" ]; then
-          echo "Updating package.json version"
           npm version ${{ steps.version.outputs.new_version }} --no-git-tag-version --allow-same-version
           
-          git add package.json
-          if [ -f "package-lock.json" ]; then
-            git add package-lock.json
-          fi
-          
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "chore: bump version to ${{ steps.version.outputs.new_version }}"
-            git push origin main
-          fi
-        else
-          echo "No package.json found, skipping"
+          git add package.json package-lock.json 2>/dev/null || git add package.json
+          git commit -m "chore: bump version to ${{ steps.version.outputs.new_version }}" || echo "No changes"
+          git push origin main || git push origin master
         fi
 
-    - name: Summary
+    - name: Notify Team
       run: |
-        echo "## 🚀 Release Created!" >> $GITHUB_STEP_SUMMARY
+        echo "## 🎉 Release ${{ steps.version.outputs.new_version }} Created!" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "**New Version:** ${{ steps.version.outputs.new_version }}" >> $GITHUB_STEP_SUMMARY
-        echo "**Previous:** ${{ steps.version.outputs.current_version }}" >> $GITHUB_STEP_SUMMARY
+        echo "**Type**: ${{ github.event.inputs.version_type }}" >> $GITHUB_STEP_SUMMARY
+        echo "**Previous**: ${{ steps.current.outputs.current_version }}" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### Featured Changes" >> $GITHUB_STEP_SUMMARY
+        echo "${{ steps.prs.outputs.prs }}" >> $GITHUB_STEP_SUMMARY
