--- a/.github/workflows/release-create.yml
+++ b/.github/workflows/release-create.yml
@@ -126,12 +126,13 @@ jobs:
             PRERELEASE_FLAG="--prerelease"
           fi
           
+          # Build release notes with proper formatting
           RELEASE_NOTES="## $NEW_VERSION
 
           ### 🚀 What's Changed
-          
+
           $CHANGES
-          
+
           ### 📊 Release Info
           - **Type**: $VERSION_TYPE release
           - **Previous Version**: $CURRENT_VERSION
