--- a/.github/workflows/release-create.yml
+++ b/.github/workflows/release-create.yml
@@ -34,16 +34,29 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Git
+        shell: bash
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
 
       - name: Get Current Version
         id: current
+        shell: bash
         run: |
           git fetch --tags
           
-          LATEST_TAG=$(git tag -l | grep -E '^[0-9]+\.[0-9]+\.[0-9]+ | sort -V | tail -1)
+          # Get all tags and filter semantic versions
+          LATEST_TAG=""
+          for tag in $(git tag -l); do
+            if [[ "$tag" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              LATEST_TAG="$tag"
+            fi
+          done
+          
+          # If we found semantic tags, get the highest one
+          if [ -n "$LATEST_TAG" ]; then
+            LATEST_TAG=$(git tag -l | grep -v "[a-zA-Z]" | sort -V | tail -1)
+          fi
           
           if [ -z "$LATEST_TAG" ]; then
             echo "No previous versions found"
@@ -57,6 +70,7 @@ jobs:
 
       - name: Calculate New Version
         id: version
+        shell: bash
         run: |
           CURRENT="${{ steps.current.outputs.current_version }}"
           VERSION_TYPE="${{ github.event.inputs.version_type }}"
@@ -86,6 +100,7 @@ jobs:
 
       - name: Get Recent Changes
         id: changes
+        shell: bash
         run: |
           CURRENT="${{ steps.current.outputs.current_version }}"
           
@@ -108,6 +123,7 @@ jobs:
           } >> $GITHUB_OUTPUT
 
       - name: Create Tag
+        shell: bash
         run: |
           NEW_VERSION="${{ steps.version.outputs.new_version }}"
           echo "Creating tag: $NEW_VERSION"
@@ -115,6 +131,7 @@ jobs:
           git push origin "$NEW_VERSION"
 
       - name: Create Release
+        shell: bash
         run: |
           NEW_VERSION="${{ steps.version.outputs.new_version }}"
           CURRENT_VERSION="${{ steps.current.outputs.current_version }}"
@@ -126,13 +143,12 @@ jobs:
             PRERELEASE_FLAG="--prerelease"
           fi
           
-          # Build release notes with proper formatting
           RELEASE_NOTES="## $NEW_VERSION
-
+          
           ### 🚀 What's Changed
-
+          
           $CHANGES
-
+          
           ### 📊 Release Info
           - **Type**: $VERSION_TYPE release
           - **Previous Version**: $CURRENT_VERSION
@@ -146,6 +162,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update package.json
+        shell: bash
         run: |
           if [ -f "package.json" ]; then
             VERSION="${{ steps.version.outputs.new_version }}"
@@ -169,6 +186,7 @@ jobs:
           fi
 
       - name: Notify Team
+        shell: bash
         run: |
           NEW_VERSION="${{ steps.version.outputs.new_version }}"
           VERSION_TYPE="${{ github.event.inputs.version_type }}"
